# affected

./: .affected.toml.example  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/affected-cli/: Cargo.toml
crates/affected-cli/src/: main.rs
crates/affected-cli/tests/: cli.rs
crates/affected-core/: Cargo.toml
crates/affected-core/src/: config.rs  detect.rs  git.rs  types.rs
crates/affected-core/src/resolvers/: bun.rs  dart.rs  dotnet.rs  elixir.rs  mod.rs  sbt.rs  swift.rs
docs/: index.html
docs/app/: head.tsx  layout.tsx
docs/components/: button.tsx  footer.tsx  hero-image.tsx
docs/components/sections/: build-momentum.tsx  clients.tsx  enjoy-issue-tracking.tsx  homepage-hero.tsx  unlike-any-tool.tsx
docs/public/: llms.txt  robots.txt  sitemap.xml
python/: build_wheels.py
python/affected/: pyproject.toml
python/affected/src/affected/: __init__.py  __main__.py  _main.py
