[package]
name = "affected-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Detect affected packages. Run only what matters. Language-agnostic monorepo tool."
keywords = ["monorepo", "testing", "ci", "affected", "workspace"]
categories = ["development-tools::testing", "command-line-utilities"]

[features]
vendored-openssl = ["affected-core/vendored-openssl"]

[[bin]]
name = "affected"
path = "src/main.rs"

[dependencies]
affected-core.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
